--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -5,6 +5,8 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
+    <%= f.input :ingredients %>
+    <%= f.input :instructions %>
     <%= f.input :url %>
   </div>
 
