--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,5 +1,10 @@
 <div id="<%= dom_id recipe %>">
   <p>
+    <strong>ID:</strong>
+    <%= recipe.id %>
+  </p>
+
+  <p>
     <strong>Name:</strong>
     <%= recipe.name %>
   </p>
