--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,8 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-l">
   <div class="container-fluid d-flex align-items-center">
     <%= link_to questions_path, class: "navbar-brand d-flex align-items-center" do %>
-      <%= image_tag "https://active-storage-rails-cards-collab.s3.eu-central-1.amazonaws.com/k25lvuw1wax08p9gj25nzd986q06?response-content-disposition=inline%3B%20filename%3D%22image.png%22%3B%20filename%2A%3DUTF-8%27%27image.png&response-content-type=image%2Fpng&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAXM7JMGXUAE47VFMA%2F20241027%2Feu-central-1%2Fs3%2Faws4_request&X-Amz-Date=20241027T183934Z&X-Amz-Expires=300&X-Amz-SignedHeaders=host&X-Amz-Signature=0f9aadbf8ccd7357dab9b43ec2e91708d51fba63e05dea86a98a7d41af723cdb", class: "me-2" %>
-      <h3 class="mb-0">German Chef</h3>
+      <%= image_tag 'logo.jpeg' %>
+      <h3 class="mb-0 ms-2">German Chef</h3>
     <% end %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
